# Pharmacy_Backend

./: LICENSE  README  README.md  add_mod.py  alembic.ini  app.py  create_tables.sql  db_utils.py  models.py  pyproject.toml  pyvenv.cfg  requirements.txt  schemas.py  swagger.yaml
src/: app.py  pyproject.toml  waitress_server.py
tests/: test_api.py
