[tool.poetry]
name = "ap-15"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ap_15"}]

[tool.poetry.dependencies]
python = "^3.8.0"
Flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
